# sffit

./: README.md  precsl.py  pyproject.toml  sample.py
src/sffit/: data.py  dencalc.py  fit.py  radn.py  sampler.py  spherical.py  util.py
tests/: test_sffit.py
tests/data/: 8el9_int.npz  8el9_out.npz  8el9_sog.json  8el9_with_sf.cif
