[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sffit"
authors = [
    { name="Alexander Shtyrov", email="ashtyrov@mrc-lmb.cam.ac.uk" },
]
description = "Fit cryo-EM scattering factors to data"
version = "0.0.1"
dependencies = [
    "numpy<2",
    "gemmi",
    "jax",
    "blackjax",
    "s2fft",
    "jax-finufft",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sffit"]

[project.scripts]
sffit = "sffit.fit:main"

[tool.hatch.metadata]
allow-direct-references = true